--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   <link rel="stylesheet" href="<%= BASE_URL %>cdn/element-ui/2.12.0/theme-chalk/index.css">
   <link rel="stylesheet" href="<%= BASE_URL %>cdn/animate/3.5.2/animate.css">
   <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/index.css">
@@ -50,7 +50,7 @@
       padding: 1em 0;
     }
 
-    .avue-home__footer > a {
+    .avue-home__footer>a {
       font-size: 12px;
       color: #ABABAB;
       text-decoration: none;
@@ -76,36 +76,38 @@
 </head>
 
 <body>
-<noscript>
-  <strong>
-    很抱歉，如果没有 JavaScript 支持，Saber 将不能正常工作。请启用浏览器的 JavaScript 然后继续。
-  </strong>
-</noscript>
-<div id="app">
-  <div class="avue-home">
-    <div class="avue-home__main">
-      <img class="avue-home__loading" src="./svg/loading-spin.svg" alt="loading">
-      <div class="avue-home__title">
-        正在加载资源
+  <noscript>
+    <strong>
+      很抱歉，如果没有 JavaScript 支持，Saber 将不能正常工作。请启用浏览器的 JavaScript 然后继续。
+    </strong>
+  </noscript>
+  <div id="app">
+    <div class="avue-home">
+      <div class="avue-home__main">
+        <img class="avue-home__loading" src="./svg/loading-spin.svg" alt="loading">
+        <div class="avue-home__title">
+          正在加载资源
+        </div>
+        <div class="avue-home__sub-title d">
+          初次加载资源可能需要较多时间 请耐心等待
+        </div>
       </div>
-      <div class="avue-home__sub-title d">
-        初次加载资源可能需要较多时间 请耐心等待
+      <div class="avue-home__footer">
+        <a href="https://bladex.vip" target="_blank">
+          https://bladex.vip </a>
       </div>
-    </div>
-    <div class="avue-home__footer">
-      <a href="https://bladex.vip" target="_blank">
-        https://bladex.vip </a>
     </div>
   </div>
-</div>
-<!-- built files will be auto injected -->
-<script src="<%= BASE_URL %>util/aes.js" charset="utf-8"></script>
-<script src="<%= BASE_URL %>cdn/vue/2.6.10/vue.min.js" charset="utf-8"></script>
-<script src="<%= BASE_URL %>cdn/vuex/3.1.1/vuex.min.js" charset="utf-8"></script>
-<script src="<%= BASE_URL %>cdn/vue-router/3.0.1/vue-router.min.js" charset="utf-8"></script>
-<script src="<%= BASE_URL %>cdn/axios/1.0.0/axios.min.js" charset="utf-8"></script>
-<script src="<%= BASE_URL %>cdn/element-ui/2.12.0/index.js" charset="utf-8"></script>
-<script src="<%= BASE_URL %>cdn/avue/2.5.0/avue.min.js" charset="utf-8"></script>
+  <!-- built files will be auto injected -->
+  <script src="<%= BASE_URL %>util/aes.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/vue/2.6.10/vue.min.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/vuex/3.1.1/vuex.min.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/vue-router/3.0.1/vue-router.min.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/axios/1.0.0/axios.min.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/element-ui/2.12.0/index.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/avue/2.5.0/avue.min.js" charset="utf-8"></script>
+  <script src="https: //unpkg.com/vue-amap/dist/index.js"></script>
 </body>
+
 
 </html>
